--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "0.13.0",
-    "mem": ">=4.0.0"
+    "json-server": "0.13.0"
   }
 }
